--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,13 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "odannyc/yii2-sse": "^0.1.0"
+        "odannyc/yii2-sse": "^0.1.0",
+        "monitorbacklinks/yii2-wordpress": "~1.1.1",
+        "automattic/woocommerce":"~3.0.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
